suite/tests/functions/valid/stack-aligned-8-args.c
#include "utils.h"

int main(void)
{
    return is_rsp_16_byte_aligned_7_args(1, 2, 3, 4, 5, 6, 7);
}
